--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a href="/" class="mr-5 hover:text-gray-900">Home</a>
             <a class="mr-5 hover:text-gray-900">About us</a>
-            <a href="/prediction" class="mr-5 hover:text-gray-900">prediction</a>
-            <a class="mr-5 hover:text-gray-900">contact us</a>
+            <a href="/prediction" class="mr-5 hover:text-gray-900">Prediction</a>
+            <a class="mr-5 hover:text-gray-900">Contact Us</a>
           </nav>
         </div>
       </header><hr>
@@ -32,11 +32,11 @@
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Fake News Detection
-              <br class="hidden lg:inline-block">Machine learning project
+              <br class="hidden lg:inline-block">BSCS 3E
             </h1>
-            <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+            <p class="mb-8 leading-relaxed">Thank You!!</p>
             <div class="flex justify-center">
-              <a href="/prediction"><button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">prediction</button></a>
+              <a href="/prediction"><button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">Prediction</button></a>
               
             </div>
           </div>
@@ -73,7 +73,7 @@
                 <a class="inline-flex items-center">
                   <img alt="testimonial" src="https://dummyimage.com/107x107" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                   <span class="flex-grow flex flex-col pl-4">
-                    <span class="title-font font-medium text-gray-900">Alper Kamu</span>
+                    <span class="title-font font-medium text-gray-900">BSCS 3E</span>
                     <span class="text-gray-500 text-sm">DESIGNER</span>
                   </span>
                 </a>
