--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -33,7 +33,7 @@
           <div class="flex flex-col text-center w-full mb-20">
             <h2 class="text-xs text-green-500 tracking-widest font-medium title-font mb-1">Machine learning project</h2>
             <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Fake News Detection</h1>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">This project is temporary for our DA porject</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
             <br><p class="text-primary"><b>{{prediction_text}}</b></p>
           </div>
           <div class="center">
